# Nkentseu

./: .clang-format  .gitignore  .nkenclean  EmbedFont.py  FINAL_INTEGRATION_REPORT_2026.md  LICENSE  Makefile  NKENTSEU_PRODUCTION_ANALYSIS_2026.md  NKMATH_SESSION_COMPLETE_2026.md  Nkentseu.jenga  Nkentseu_TestRunner.py  QUICK_STATUS_2026.txt  README.md  SESSION_FINAL_REPORT_2026.md  audit_loaders.py  code_metadata.json  config.py  context  create.bat  dd4.md  final_cache_pass.py  fix_bitmap_calls.py  fix_demo_shaper_calls.py  fix_getters.py  fix_method_calls.py  fix_remaining_calls.py  fix_ttf_getters.py  fs  nk_missing_symbols.txt  nk_nm.txt  nk_symbols_all.txt  nken.bat  nken.sh  nkentseuconfig.py  nkfont  nkrhicommand  nkrhiconvert  nkrhicore  nkrhisl  nkui  (+17 more)
Applications/Model/: Model.jenga  cours1.md  cours2.md  cours3.md
Applications/NKPA/: NKPA.jenga
Applications/PV3DE/: ARCHITECTURE.md  PV3DE.jenga
Applications/Pong/: Pong.jenga
Applications/Sandbox/: Sandbox.jenga  Sandbox.tmpjenga
Applications/Unkeny/: Unkeny.jenga
Core/Nkentseu/: Makefile  Readme.md  premake5.lua
Core/Unitest/: Makefile  Readme.md  premake5.lua
Engine/Nkentseu/: Nkentseu.jenga  Nkentseu_ModelingAnimation.docx  Nkentseu_Roadmap_Complete.docx
Engine/Nova/: Makefile  premake5.lua
Modules/Runtime/: code_metadata.json  context.txt  renderer.txt
Modules/Runtime/NKCollision/collision_lib/: CMakeLists.txt
Modules/Runtime/NKCollision/collision_lib/examples/: example_usage.cpp
Modules/Runtime/NKCollision/collision_lib/include/collision/: broadphase.h  ccd.h  collision.h  debug_draw.h  gpu_backend.h  math.h  narrowphase.h  persistent_contacts.h  shapes.h  world.h
Modules/Runtime/NKCollision/collision_lib/shaders/cuda/: collision_broadphase.cu
Modules/Runtime/NKCollision/collision_lib/shaders/dx11/: collision_broadphase.hlsl
Modules/Runtime/NKCollision/collision_lib/shaders/opengl/: collision_broadphase.glsl
Modules/Runtime/NKCollision/collision_lib/shaders/vulkan/: collision_broadphase.comp  collision_narrowphase.comp
Modules/Runtime/NKCollision/collision_lib/shaders/webgpu/: collision_broadphase.wgsl
Modules/Runtime/NKCollision/collision_lib/src/: shapes.cpp
Modules/Runtime/NKCollision/collision_lib/src/gpu/: dx12_backend.h  dx12_backend_impl.h  opengl_backend.h  vulkan_backend.h
Modules/Runtime/NKCollision/collision_lib/tests/: benchmarks.cpp  test_main.cpp  test_suite.cpp  unit_tests.cpp
NKCore/: NKCore.jenga
NKCore/pch/: pch.h
NKLogger/: NKLogger.jenga
NKMath/: NKMath.jenga
NKMemory/: NKMemory.jenga
NKPlatform/: NKPlatform.jenga
NKRenderer/: NKRenderer.jenga
NKStream/: NKStream.jenga
NKTime/: NKTime.jenga
NKWindow/: NKWindow.jenga  docs_tmp.html
NKWindow/pch/: pch.h
NKWindow/tests/: test_smoke.cpp
NTSGraphics/: NTSGraphics.vcxproj  NTSGraphics.vcxproj.filters  premake5.lua
Pcp/: NKENTSEU_CONCEPTION_COMPLETE.md  NOMENCLATURE_ET_DOCUMENTATION (2).md  NOMENCLATURE_ET_DOCUMENTATION.md  SECTION_4_5_ARCHITECTURE (2).md  SECTION_6_7_DIAGRAMS_SPECS.md  SECTION_8_9_ROADMAP_ANNEXES (2).md  fen.md  fen2.md
Rapport/: rapport.tex
Resources/Icons/: icons.sketch
Resources/Mapping/: gamecontrollerps3.txt  gamecontrollerxbox.txt  mappings.txt
Resources/Meshs/: cube.nogestaticmesh
Resources/Models/: LowPolyCars.mtl  car.glb
Resources/Shaders/: GLSLShadowFrag.frag  GLSLShadowVert.vert  convertshader.bat  convertshader.ps1  convertshader.py  grid.frag  grid.vert  (+15 more)
Sandbox/: Sandbox.jenga
Tools/: build.bat  build.sh  clear.bat  clear.sh  config.lua  debug.bat  debug.sh  gen.bat  gen.sh  install.sh  run.bat  run.sh
docs/: ARCHITECTURE.md  COMPLETION_STATUS.md  FINAL_INTEGRATION_REPORT_2026.md  NKENTSEU_PRODUCTION_ANALYSIS_2026.md  NKMATH_SESSION_COMPLETE_2026.md  NKMemory_Production_Guide.md  NKMemory_Validation_Course.md  NKMemory_Validation_Report.md  NKRenderer_Simple_Context_Init.md  NKSurface_Backend_Initialization_Guide.md  NKWindow_OpenGL_GLAD_Quickstart.md  NKWindow_Renderer_Student_Procedure.md  OPTIMIZATION_GUIDE_2026.md  OPTIMIZATION_ROADMAP.md  PLATFORM_ISSUES_ANDROID_WEB_WAYLAND_2026.md  README.md  SESSION_FINAL_REPORT_2026.md  TEST_FRAMEWORK_README.md  WAYLAND_TEST_DEBUG_GUIDE_FR.md  dd2.md  dd3.md  dd4.md  ssh.md
nkentools/: config.lua  nken.py
scripts/: genspv.bat  genspv.py  genspv.sh  push_main.bat  push_main.sh  push_rihen_branch.bat  push_rihen_branch.sh  setup_deps.py  validate_release.ps1  validate_release.sh
tmp/: NkXLibWindow_GLX_Changes.cpp  benchmark_smoke.cpp  test_smoke.cpp
tmp/NkEngine_Layers01/NkFinal_work/: CMakeLists.txt  INSTALLATION_GUIDE.md
tmp/NkEngine_Layers01/NkFinal_work/Compute/: NkDX12ComputeContext.h  NkMetalComputeContext.h  NkMetalComputeContext.mm  NkVulkanComputeContext.h
tmp/NkEngine_Layers01/NkFinal_work/Core/: NkContextInfo.h  NkIGraphicsContext.h  NkOpenGLDesc.h  NkSurfaceDesc.h  NkTypes.h
tmp/NkEngine_Layers01/NkFinal_work/Demo/: NkGraphicsDemos.cpp
tmp/NkEngine_Layers01/NkFinal_work/DirectX/: NkDX12Context.cpp  NkDirectXContextData.h
tmp/NkEngine_Layers01/NkFinal_work/Metal/: NkMetalContext.h  NkMetalEntryPoint.mm
tmp/NkEngine_Layers01/NkFinal_work/OpenGL/: NkOpenGLContext.h  NkOpenGLContextData.h
tmp/NkEngine_Layers01/NkFinal_work/Vulkan/: NkVulkanContextData.h
tmp/rhi/: CMakeLists.txt
tmp/rhi/Commands/: NkICommandBuffer.h
tmp/rhi/Core/: NkDeviceFactory.cpp  NkDeviceFactory.h  NkIDevice.h  NkRHIDescs.h  NkRHITypes.h
tmp/rhi/DirectX11/: NkCommandBuffer_DX11.cpp  NkCommandBuffer_DX11.h  NkRHI_Device_DX11.cpp  NkRHI_Device_DX11.h
tmp/rhi/DirectX12/: NkCommandBuffer_DX12.cpp  NkCommandBuffer_DX12.h  NkRHI_Device_DX12.cpp  NkRHI_Device_DX12.h
tmp/rhi/Metal/: NkCommandBuffer_Metal.h  NkCommandBuffer_Metal.mm  NkRHI_Device_Metal.h  NkRHI_Device_Metal.mm
tmp/rhi/Opengl/: NkRHI_Device_GL.cpp  NkRHI_Device_GL.h
tmp/rhi/Software/: NkCommandBuffer_SW.cpp  NkCommandBuffer_SW.h  NkRHI_Device_SW.cpp  NkRHI_Device_SW.h
tmp/rhi/Vulkan/: NkVulkanCommandBuffer.cpp  NkVulkanCommandBuffer.h  NkVulkanDevice.cpp  NkVulkanDevice.h
vector/: CMakeLists.txt  Vector.cpp  Vector.h
(+3057 files in other folders)
